--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="mainMenu">
     <ul>
-        <li>Home</li>
-        <li>Login</li>
-        <li>Register</li>
+        <li><a routerLink='/home'>Home</a></li>
+        <li><a routerLink='/details'>Details</a></li>
+        <li><a routerLink='/login'>Login</a></li>
+        <li><a routerLink='/register'>Register</a></li>
     </ul>
 </div>
 
