--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
-<div class="mainMenu">
-    <ul>
-        <li><a routerLink='/home'>Home</a></li>
-        <li><a routerLink='/details'>Details</a></li>
-        <li><a routerLink='/login'>Login</a></li>
-        <li><a routerLink='/register'>Register</a></li>
-    </ul>
+<div class="mainMenu navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a routerLink='/home'>Home</a></li>
+                <li><a routerLink='/details'>Details</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a routerLink='/login'>Login</a></li>
+                <li><a routerLink='/register'>Register</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <router-outlet></router-outlet>
