--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,13 @@
                 <li><a routerLink='/home'>Home</a></li>
                 <li><a routerLink='/details'>Details</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" *ngIf="!global.isLogin">
                 <li><a routerLink='/login'>Login</a></li>
                 <li><a routerLink='/register'>Register</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" *ngIf="global.isLogin">
+                <li><a>{{global.currentUser}}</a></li>
+                <li><a (click)="logout()">Logout</a></li>
             </ul>
         </div>
     </div>
