--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <h2>Welcome to our School Management System</h2>
-  <p>Login to proceed further</p>
+  <p *ngIf="!global.isLogin">Login to proceed further</p>
 </div>
