--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -59,6 +59,11 @@
           <p>{{loginMessage}}</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-2">
+            <input type="button" class="btn btn-success btn-sm" (click)="retry()">
+        </div>
+      </div>
     </div>
   </ng-template>
 </div>
