--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -60,8 +60,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-2">
-            <input type="button" class="btn btn-success btn-sm" (click)="retry()">
+        <div class="col-md-2 col-md-offset-2">
+            <input type="button" class="btn btn-info btn-sm" (click)="retry()" value="Retry">
         </div>
       </div>
     </div>
